--- a/src/stylesheets/editor.scss
+++ b/src/stylesheets/editor.scss
@@ -2,8 +2,17 @@
 	margin-bottom: 10px;
 }
 
-&.o-chat--order-inverted .o-chat--editor-area {
-	margin-top: 10px;
+&.o-chat--order-inverted {
+	.o-chat--editor-area {
+		margin-top: 10px;
+	}
+
+	&.o-chat--stretch-vertical {
+		@include oGridRespondTo($until: M) {
+			margin-top: 0;
+			margin-bottom: 10px;
+		}
+	}
 }
 
 .o-chat--loggedin {
